# clvisc

./: D0.py  README  run.py
CLSmoothSpec/: CMakeLists.txt
CLSmoothSpec/inc/: Config.h  Config.h.in  Int.h  cl_spec.h  linear_int.h
CLSmoothSpec/src/: cl_spec.cpp  helper.h  kernel_decay.cl  kernel_spec.cl  kernel_spec_csc.cl  main.cpp
doc/: CLVisc3D.lyx  Makefile  conf.py  index.rst  make.bat  pyvisc.ana.rst  pyvisc.eos.rst  pyvisc.rst  pyvisc.tests.rst
doc/pdf/: CLViscNote.tex  IS_Equations.ipynb
jet_eloss/: analysis.py  collect_spec.py  ebe_intg_along_jet.py  four_momentum.py  jet_eloss.py  run.sh
pbpb5p02/: auau.py  copy_data.py  create_table.py  pbpb.py  submit_pbpb2p76.sh  submit_pbpb5p02.sh
pbpb5p02/plot_auau/: plot_dNdEta.py  plot_ptspec.py
pbpb5p02/plot_pbpb/: common_plotting.py  plot_dNdEta.py  plot_dNdEta_5020.py  plot_ptspec.py
plot/: plot_Txtau.py  plot_Txtau_QCD.py  plot_cmp.py
polarization/: gpu_polarization.py  integrated_pol.py  kernel_polarization.cl  lambda_polarisation.py  plot_from_hdf5.py  polarization_vs_pxpy.py  read_from_hdf5.py
pyvisc/: bulkinfo.py  bulkinfo_h5.py  cl_visc.cpp  config.py  ebe.py  ebe_ampt.py  ebe_trento.py  eos.py  glauber.py  glueball.py  gsi_pbpb2760.sh  h5plot.py  hydro.info  ideal.py  main.py  pimninfo.py  polarization.py  smearing.py  spec.py  submit_amptjobs.py  submit_jobs.py  visc.py
pyvisc/ana/: __init__.py  common_plotting.py  correlation.py  four_momentum.py  integrated_pol.py  polarization.py
pyvisc/eos/: Glueball_EOS.ipynb  __init__.py  chemical_potential.py  comparison.py  eos.py  eos_handcraft.py  eosq.py  glueball.py  pce.py  wb.py  wb_mod.py
pyvisc/experiments/: auau200.py  common_plotting.py  compare_auau200.py  compare_pbpb2760.py  helper.py  load.py  pbpb2760.py  pbpb5020.py  plot_vn_vs_eta.py  vn_vs_eta_data.py
pyvisc/kernel/: CCube.cpp  EosPCEv0.cl  MWC64X.cl  eos_spline.h  eos_table.h  helper.h  kernel_IS.cl  kernel_bulk.cl  kernel_bulk3d.cl  kernel_bulkinfo.cl  kernel_checkpi.cl  kernel_gaussian_smearing.cl  kernel_gaussian_smearing_new.cl  kernel_glauber.cl  kernel_gubser_visc.cl  kernel_hyperfs.cl  kernel_hypersf.cl  kernel_ideal.cl  kernel_jet_eloss.cl  kernel_magnetic.cl  kernel_polarization.cl  kernel_reduction.cl  kernel_src2.cl  kernel_velocity_gradient.cl  kernel_visc.cl  kernel_vorticity.cl  kernel_vorticity.h  real_type.h  skip_mwc.cl  tags
pyvisc/plots/: HelmholtzHodge.py  test_hh.py  vorticity_xy.py
pyvisc/polarization/: common_plotting.py  correlation.py  four_momentum.py  integrated_pol.py  polarization.py
pyvisc/tests/: hydro.info  test_bjorken.py  test_bjorken_visc.py  test_eos.py  test_gubser_ideal.py  test_gubser_visc.py  test_hypersf.py  test_kernel_helper.py  test_longitudinal_expansion.py  test_reduction.py  test_riemann.py
results/D0/: Identified_Pt_Spec.txt  dNdEta_ch_b0_6.txt
sampler/: CMakeLists.txt  MC_particles.ipynb
sampler/doc/: dNdPt_pikp.py  dNdY_pikp.py  sampler.aux  sampler.tex
sampler/mcspec/: common_plotting.py  for_deep_learning.py  many_events.py  mcspec.py  mcspec_etaos0p16.py  out  run.sh  sampler.py  sampler.py.lprof  (+1 more)
sampler/src/: ._ars.cc  CMakeLists.txt  ars.cc  distributions.cc  inputfunctions.cc  main.cc  particletype.cc  sampler.cc  spec_vn.cc
sampler/src/include/: ars.h  distributions.h  forwarddeclarations.h  inputfunctions.h  integrate.h  particletype.h  random.h  sampler.h  spec_vn.h
spec/: const.py  dndeta_correlation.py  event_by_event.py  main.py  mcspec.py  spec_new.py
xexe5440_oneshot/: copy_xexe.py  create_table.py  xexe5440.sh  xexe_one_shot.py
(+415 files in other folders)
